Implemented skill management